# fastapi-graphql-orm

./: .env.example  .flake8  .gitignore  alembic.ini  main.py  pyproject.toml  pytest.ini
app/example/: crud.py  model.py  schema.py  type.py
config/: database.py  graphql.py  settings.py
core/mixin/: crud.py  model.py  schema.py
database/migrations/: env.py
database/migrations/versions/: 1b846a183477_.py
database/seeds/: database_seeder.py
src/: main.py
src/app/example/: model.py  schema.py  type.py
src/config/: database.py  graphql.py  settings.py
src/core/mixin/: model.py  schema.py
src/database/migrations/: env.py
tests/: test_version.py
