[tool.poetry]
name = "fastapi-graphql-orm"
version = "0.1.0"
description = ""
authors = ["nythonore <niyitegekah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
taskipy = "^1.10.2"
strawberry-graphql = {extras = ["fastapi"], version = "^0.126.0"}
uvicorn = {extras = ["standard"], version = "^0.18.2"}
sqlmodel = "^0.0.6"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
greenlet = "^1.1.2"
fastapi-async-sqlalchemy = "^0.3.12"
shortuuid = "^1.0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"

[tool.taskipy.tasks]
start = "uvicorn src.main:app --port 4000 --reload"
db-migrate = "alembic revision --autogenerate"
db-upgrade = "alembic upgrade head"
diff = "black . --diff && isort . --diff && flake8 . --diff"
lint = "black . && isort . && flake8 ."
test = "pytest"

[tool.black]
extend-exclude = ""

[tool.isort]
profile = "black"
atomic = true
extend_skip_glob = ""
line_length = 88

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
warn_no_return = false
warn_unused_ignores = true
allow_untyped_globals = true
allow_redefinition = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
